--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Roboto", "Helvetica Neue", "Tahoma", sans-serif;
-  color: var(--primary-text-color);
-  background-color: var(--primary-white-color);
+  color: #757575;
+  background-color: #ffffff;
   font-size: 14px;
   letter-spacing: 0.03em;
 }
@@ -171,7 +171,7 @@ ul {
   letter-spacing: 0.02em;
   padding-left: 0;
   text-decoration: none;
-  color: #757575;
+  color: #212121;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -186,7 +186,7 @@ ul {
   width: 100%;
   height: 4px;
   border-radius: 2px;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 .site-header__link:hover, .site-header__link:focus {
   color: #2196f3;
@@ -381,7 +381,7 @@ ul {
   resize: none;
 }
 .modal-comment:focus {
-  border: 1px solid var(--accent-color);
+  border: 1px solid #2196f3;
   outline: transparent;
 }
 
@@ -734,7 +734,7 @@ ul {
 
 .site-footer__text {
   margin-bottom: 9px;
-  color: var(--primary-white-color);
+  color: #ffffff;
 }
 
 .site-footer__social {
