--- a/sass/base/_resets.scss
+++ b/sass/base/_resets.scss
@@ -1,7 +1,7 @@
 body {
     font-family: "Roboto", "Helvetica Neue", "Tahoma", sans-serif;
-    color: var(--primary-text-color);
-    background-color: var(--primary-white-color);
+    color: $primary-text-color;
+    background-color: $primary-white-color;
     font-size: 14px;
     letter-spacing: 0.03em;
   }
