--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -29,7 +29,7 @@
     letter-spacing: 0.02em;
     padding-left: 0;
     text-decoration: none;
-    color: $primary-text-color;
+    color: $secondary-text-color;
   
     transition: color $transition-time $cubic-default;
 
@@ -42,7 +42,7 @@
         width: 100%;
         height: 4px;
         border-radius: 2px;
-        background-color: var(--accent-color);
+        background-color: $accent-color;
       }
       &:hover, &:focus {color: $accent-color}
   }
